# power_trade

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  batch_upload_trades.py  docker-compose.yaml  epex_trades_20230614.csv  generate_report_script.py  main.py  pyproject.toml
.github/workflows/: lint_n_test.yaml  periodic_task.yaml
dashboard/: .dockerignore  index.html  style.css
power/: api.py  constants.py  exception_handler.py  generate_report.py  models.py  schemas.py  settings.py
tests/: conftest.py  test_batch_upload_trades.py
tests/fixtures/: sample_trades.json
tests/test_power/: test_api.py  test_generate_report.py
