[tool.poetry]
name = "power"
version = "0.1.0"
description = ""
authors = ["Shipra <code.shipra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
sentry-sdk = "^1.25.1"
tortoise-orm = "0.18.1"
aerich = "^0.7.1"
requests = "^2.31.0"
aiohttp = "^3.8.4"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.272"
black = "^23.3.0"
isort = "^5.12.0"
ipdb = "^0.13.13"
pre-commit = "^3.3.3"
pytest = "^7.3.2"
asyncio = "^3.4.3"
httpx = "^0.24.1"
pytest-asyncio = "^0.21.0"
freezegun = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
format = "grouped"
line-length = 119
select = ["A", "B", "C", "C4", "D", "E", "F", "I", "PIE", "S", "W"]
ignore = [ "B008", "D1", "N814", "D211", "D213", "PIE794", "S101", "S104", "SIM300"]
exclude = [ ".venv", "venv", "migrations", ".git", "__pycache__", "venv", ".venv", "env", ".env", "migrations"]

[tool.ruff.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.mccabe]
max-complexity = 8

[tool.pytest.ini_options]
asyncio_mode = "auto"
